made 4 smaller sliders

--- a/index.html
+++ b/index.html
@@ -28,12 +28,27 @@
 			<div id="powerGenerationSetter">
 				<div id="results">
 					<h4>If this usage rate remains constant over the next 50 years, the American electrical sector alone will be responsible for this increase in temperature</h3>
-					<div id="meterBackground">
-						<label id="celciusWarming" for="temperature" class="temperatureLabel">0C</label>
-						<meter id="warmingMeter" max="0.4" optimum="0" value="0"></meter>
-						<span id="ferenheightWarming" class="temperatureLabel">0°F</span>
+					<div class="meterBackground">
+						<label for="gasMeter" class="temperatureLabel">Gasoline</label>
+						<meter id="gasMeter" max="0.4" optimum="0" value="0"></meter>
+						<span id="gasGas" class="temperatureLabel">0 GGE</span> 
 					</div>
-					<h3>Keep in mind, this is in addition to all other global sources of warming- cars, boats, not to mention other countries!</h5>
+					<div class="meterBackground">
+						<label for="dieselMeter" class="temperatureLabel">Diesel</label>
+						<meter id="dieselMeter" max="0.4" optimum="0" value="0"></meter>
+						<span id="dieselGas" class="temperatureLabel">0 GGE</span>
+					</div>
+					<div class="meterBackground">
+						<label for="hybridMeter" class="temperatureLabel">Hybrid</label>
+						<meter id="hybridMeter" max="0.4" optimum="0" value="0"></meter>
+						<span id="hybridGas" class="temperatureLabel">0 GGE</span>
+					</div>
+					<div class="meterBackground">
+						<label for="electricMeter" class="temperatureLabel">Electric</label>
+						<meter id="electricMeter" max="0.4" optimum="0" value="0"></meter>
+						<span id="electricGas" class="temperatureLabel">0 GGE</span>
+					</div>
+					<h3>Keep in mind, this is in addition to all other global sources of warming- cars, boats, not to mention other countries!</h3>
 				</div>
 				<h4 id="instructions">Slide the bars on the bottom back and forth to determine how much electricity generated
 					from different fossil fuels each American will use each year
